<resources>
    <string name="app_name">Disaster Relief</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Disaster Relief</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_share">Share</string>
    <string name="menu_about">About Us</string>
    <string name="menu_intro">Introduction</string>
    <string name="menu_nature">Nature Disaster</string>
    <string name="menu_man">Man Made Disasters</string>
    <string name="menu_cycle">Disaster Management Cycle</string>
    <string name="menu_kit">Disaster Emergency Kit</string>
    <string name="menu_game">Game Based Learning</string>
    <string name="menu_ref">References</string>
    <string name="menu_help">Help Line</string>
    <string name="menu_ngos">Connect With NGOs</string>
    <string name="title_activity_introduction">Introduction</string>
    <string name="title_activity_natute_disaster">NatureDisaster</string>
    <string name="title_activity_man_made_disaster">ManMadeDisaster</string>
    <string name="title_activity_disaster_management_cycle">DisasterManagementCycle</string>
    <string name="title_activity_disater_emergency_kit">DisaterEmergencyKit</string>
    <string name="title_activity_game_based_learnig">GameBasedLearnig</string>
    <string name="title_activity_references">References</string>
    <string name="title_activity_help_line">HelpLine</string>
    <string name="title_activity_earth_quakes">EarthQuakes</string>
    <string name="title_activity_floods">Floods</string>
    <string name="title_activity_landslides">Landslides</string>
    <string name="title_activity_cyclones">Cyclones</string>
    <string name="title_activity_tsunamis">Tsunamis</string>
    <string name="title_activity_drought">Drought</string>
    <string name="title_activity_urban_flood">UrbanFlood</string>
    <string name="title_activity_heat_wave">HeatWave</string>
    <string name="title_activity_earth_quake_info">EarthQuake Info</string>
    <string name="title_activity_earth_quake_map">EarthQuake Map</string>
    <string name="title_activity_earth_quake_do">EarthQuake Do and Donot</string>
    <string name="title_activity_earth_quake_recover">EarthQuake Recover</string>
    <string name="title_activity_earth_quake_emergency">EarthQuake Emergency</string>
    <string name="title_activity_earth_quake_guideline">EarthQuake Guideline</string>
    <string name="title_activity_floods_info">Floods Info</string>
    <string name="title_activity_floods_map">Floods Map</string>
    <string name="title_activity_floods_do">Floods Do and Donot</string>
    <string name="title_activity_floods_emergency">Floods Emergency</string>
    <string name="title_activity_floods_guidelines">Floods Guidelines</string>
    <string name="title_activity_landslides_info">Landslides Info</string>
    <string name="title_activity_landslide_map">Landslide Map</string>
    <string name="title_activity_landslide_do">LandslideDo</string>
    <string name="title_activity_landslides_recover">Landslides Recover</string>
    <string name="title_activity_landslides_emergency">Landslides Emergency</string>
    <string name="title_activity_landslides_guideline">Landslides Guideline</string>
    <string name="title_activity_cyclones_info">Cyclones Info</string>
    <string name="title_activity_cyclones_map">Cyclones Map</string>
    <string name="title_activity_cyclones_do">Cyclones Do and Donot</string>
    <string name="title_activity_cyclones_recovery">Cyclones Recovery</string>
    <string name="title_activity_cyclones_emergency">Cyclones Emergency</string>
    <string name="title_activity_cyclones_guideline">Cyclones Guideline</string>
    <string name="title_activity_tsunamis_info">Tsunamis Info</string>
    <string name="title_activity_tsunamis_map">Tsunamis Map</string>
    <string name="title_activity_tsunamis_do">Tsunamis Do and Donot</string>
    <string name="title_activity_tsunamis_recovery">Tsunamis Recovery</string>
    <string name="title_activity_tsunamis_emergency">Tsunamis Emergency</string>
    <string name="title_activity_tsunamis_guideline">Tsunamis Guideline</string>
    <string name="title_activity_drought_info">DroughtInfo</string>
    <string name="title_activity_drought_do">Drought Do and Donot</string>
    <string name="title_activity_urban_flood_info">Urban Flood Info</string>
    <string name="title_activity_urban_flood_do">Urban Flood Do and Donot</string>
    <string name="title_activity_urban_flood_recovery">Urban Flood Recovery</string>
    <string name="title_activity_urban_flood_emergency">Urban Flood Emergency</string>
    <string name="title_activity_urban_flood_guideline">Urban Flood Guideline</string>
    <string name="title_activity_heat_wave_info">HeatWave Info</string>
    <string name="title_activity_heat_wave_do">HeatWave Do and Donot</string>
    <string name="title_activity_heat_wave_recovery">HeatWave Recovery</string>
    <string name="title_activity_heat_wav_emergency">HeatWave Emergency</string>
    <string name="title_activity_nuclear_disasters">Nuclear Disasters</string>
    <string name="title_activity_industrialand_chemical_disasters">Industrial and Chemical Disasters
    </string>
    <string name="title_activity_biological_disasters">Biological Disasters</string>
    <string name="title_activity_nuclear_disasters_info">Nuclear Disasters Info</string>
    <string name="title_activity_nuclear_disasters_do">Do and Donot</string>
    <string name="title_activity_nuclear_disasters_guideline">Guideline</string>
    <string name="title_activity_industrial_disaster_info">Infomormation</string>
    <string name="title_activity_industrial_disaster_common">Common Hazardous</string>
    <string name="title_activity_industria_disaster_do">Do and Donot</string>
    <string name="title_activity_industrial_disaster_guidleline">Guidleline
    </string>
    <string name="title_activity_biological_disasters_info">Information</string>
    <string name="title_activity_biological_disasters_do">Do and Donot</string>
    <string name="title_activity_biological_disasters_emergency">Emergency
    </string>
    <string name="title_activity_biological_disasters_guideline">Guideline
    </string>
    <string name="information">Information</string>
    <string name="zone_and_map">Zone and Map</string>
    <string name="do_s_and_dont_s">Do\'s and Dont\'s</string>
    <string name="recovery_and_build">Recovery and Build</string>
    <string name="about">
        "The National Disaster Management Authority (NDMA), headed by the Prime Minister of India, is the apex body for Disaster Management in India. Setting up of NDMA and the creation of an enabling environment for institutional mechanisms at the State and District levels is mandated by the Disaster Management Act, 2005.\n\n"
"Empowering Stakeholders for Improving the Effectiveness of Disaster Management in India\n\n"
    </string>
    <string name="indroduction">Introduction</string>
    <string name="indroductiontext">
        "Disasters are as old as human history but the dramatic increase and the damage caused by them in the recent past have become a cause of national and international concern.\n\n"
"‘Disaster’ is defined as a crisis situation causing wide spread damage which exceeds ability to recover. Thus, by definition, there cannot be a perfect ideal system that prevents damage, because then it would not be a disaster. It has to suffocate our ability to recover. Only then it can be called as ‘disaster’. The disasters often differ in quantity of damage caused or in quality of the type of medical consequences.\n\n"
"<b>Disaster management</b> is the discipline of dealing with and avoiding both natural and manmade disasters. It is the discipline of dealing with and avoiding risks. This discipline involves preparedness, response and recovery in order to lessen the impact of disasters. Through some safety measures, these disasters could be avoided to some extent.\n\n"
"For detailed information on disaster management in India (Click here)\n\n"
"These are some of the general measures to be kept in mind during Disasters:\n"
"1. Shout for Help- In case of any emergency, shout for help. There will be people around who might come for help.\n"
"2. Call for Ambulance- Make sure that you recall all the emergency contact numbers. You should keep these numbers handy with you.\n"
"3. Most Important- Always keep First-aid kit in the house, public/ private vehicle and work place.\n\n""Your first aid kit should be well equipped with Adhesive tape, bandages, Three medium and three large sterilized dressing, Cotton wool Cotton buds, Disposable (gloves/Tongue depressor), Tweezers, scissors and safety pins.\n"
    </string>
    <string name="about1">About</string>
    <string name="doandnot">"Do's and Dont's"</string>
    <string name="Map">Zone and Map</string>
    <string name="recovery">Recovery and Build</string>
    <string name="emergency">Emergency Kit</string>
    <string name="guideline">Guideline</string>
    <string name="common">Common Hazardous Chemicals</string>
    <string name="EarthMap">

    </string>
    <string name="FloodMap">

    </string>
    <string name="CyclonsMap">

    </string>
    <string name="TsunamisMap">

    </string>
    <string name="earthquake_map">EarthQuake Zone Map</string>
    <string name="floods_map">Floods Zone Map</string>
    <string name="cyclone_zone_map">Cyclone Zone Map</string>
    <string name="tsunamis_zone_map">Tsunamis Zone Map</string>
    <string name="guidelines">Guidelines</string>
</resources>