<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EarthQuakeMap"

    tools:showIn="@layout/activity_earth_quake_map"
    android:background="@drawable/bg1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Map"
        android:text="@string/earthquake_map"
        android:textAlignment="center"
        android:textColor="@color/white1"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <ImageView
            android:id="@+id/EarthQuakesMap"
            android:layout_width="match_parent"
            android:layout_height="418dp"
            android:contentDescription="@string/EarthMap"
            android:visibility="visible"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/earthquake"
            tools:srcCompat="@drawable/earthquake"
            tools:visibility="visible" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>