<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CyclonesMap"
    android:orientation="vertical"
    tools:showIn="@layout/activity_cyclones_map"
    android:background="@drawable/ip6">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Map"
        android:text="@string/cyclone_zone_map"
        android:textAlignment="center"
        android:textColor="@color/white1"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/CycloneMap"
            android:layout_width="match_parent"
            android:layout_height="418dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/CyclonsMap"
            android:visibility="visible"
            app:srcCompat="@drawable/cyclones"
            tools:srcCompat="@drawable/cyclones"
            tools:visibility="visible" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>